@@ -61,9 +61,7 @@ import uk.gov.hmcts.reform.prl.enums.manageorders.OtherOrganisationOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.SelectTypeOfOrderEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.ServeOtherPartiesOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.WithDrawTypeOfOrderEnum;
-import uk.gov.hmcts.reform.prl.enums.sdo.SdoFurtherInstructionsEnum;
 import uk.gov.hmcts.reform.prl.enums.sdo.SdoHearingsAndNextStepsEnum;
-import uk.gov.hmcts.reform.prl.enums.sdo.SdoLocalAuthorityEnum;
 import uk.gov.hmcts.reform.prl.enums.serveorder.CafcassCymruDocumentsEnum;
 import uk.gov.hmcts.reform.prl.enums.serveorder.LocalAuthorityDocumentsEnum;
 import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaSolicitorServingRespondentsEnum;
@@ -204,6 +202,7 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
+@SuppressWarnings("unchecked")
 class ManageOrderServiceTest {
 
     @InjectMocks
@@ -702,7 +701,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -738,7 +737,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -774,7 +773,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -810,7 +809,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -846,7 +845,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -882,7 +881,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -999,7 +998,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1035,7 +1034,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1070,7 +1069,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1107,7 +1106,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1413,7 +1412,7 @@ class ManageOrderServiceTest {
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
 
         manageOrderService.updateCaseDataWithAppointedGuardianNames(caseDetails, namesList);
-        assertEquals("Full Name", caseDataNameList.get(0).getValue().getGuardianFullName());
+        assertEquals("Full Name", caseDataNameList.getFirst().getValue().getGuardianFullName());
     }
 
 
@@ -1544,7 +1543,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1581,7 +1580,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1614,7 +1613,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1651,8 +1650,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
-        List<OrderRecipientsEnum> recipientList = new ArrayList<>();
+
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -1699,7 +1697,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1736,7 +1734,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2159,32 +2157,13 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-
-        List<DynamicMultiselectListElement> elements = new ArrayList<>();
-        DynamicMultiselectListElement element = DynamicMultiselectListElement.builder()
-            .code("1234")
-            .label("test label").build();
-        elements.add(element);
-        Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
-                                                                                          .builder()
-                                                                                          .orderDocument(Document
-                                                                                                             .builder()
-                                                                                                             .build())
-                                                                                          .dateCreated(now)
-                                                                                          .orderTypeId(TEST_UUID)
-                                                                                          .otherDetails(
-                                                                                              OtherOrderDetails.builder().build())
-                                                                                          .build()).build();
-        List<Element<OrderDetails>> orderList = new ArrayList<>();
-        orderList.add(orders);
         when(dgsService.generateDocument(Mockito.anyString(), Mockito.any(CaseDetails.class), Mockito.any()))
             .thenReturn(generatedDocumentInfo);
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         when(hearingService.createAutomatedHearing(authToken, null))
             .thenThrow(new ManageOrderRuntimeException("Invalid Json"));
-        Exception exception = assertThrows(ManageOrderRuntimeException.class, () -> {
-            hearingService.createAutomatedHearing(authToken, null);
-        });
+        Exception exception = assertThrows(ManageOrderRuntimeException.class,
+                                           () -> hearingService.createAutomatedHearing(authToken, null));
         String expectedMessage = "Invalid Json";
         assertTrue(expectedMessage.contains(exception.getMessage()));
     }
@@ -2218,8 +2197,6 @@ class ManageOrderServiceTest {
                                                       .build())))
             .build();
 
-        OrderDetails orderDetails = OrderDetails.builder().typeOfOrder("kkkkk").dateCreated(LocalDateTime.now()).build();
-        Element<OrderDetails> orders1 = element(orderDetails);
         Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
                                                                                           .builder()
                                                                                           .orderTypeId(TEST_UUID)
@@ -2279,8 +2256,6 @@ class ManageOrderServiceTest {
                                                       .build())))
             .build();
 
-        OrderDetails orderDetails = OrderDetails.builder().typeOfOrder("kkkkk").dateCreated(LocalDateTime.now()).build();
-        Element<OrderDetails> orders1 = element(orderDetails);
         Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
                                                                                           .builder()
                                                                                           .orderType("null")
@@ -3638,7 +3613,7 @@ class ManageOrderServiceTest {
         when(hearingService.getHearings(authToken, "123")).thenReturn(hearings);
 
         //invoke
-        DynamicList dynamicList1 = manageOrderService.populateHearingsDropdown(authToken, caseData);
+        manageOrderService.populateHearingsDropdown(authToken, caseData);
 
         //asserts
         assertNotNull(caseData.getManageOrders().getHearingsType());
@@ -3754,7 +3729,7 @@ class ManageOrderServiceTest {
             .build();
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         manageOrderService.resetChildOptions(callbackRequest);
-        assertEquals(null, callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
+        assertNull(callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
     }
 
     @Test
@@ -3811,15 +3786,6 @@ class ManageOrderServiceTest {
 
     @Test
     void testGetJudgeFullName() {
-        StandardDirectionOrder standardDirectionOrder = StandardDirectionOrder.builder()
-            .sdoAllocateOrReserveJudgeName(JudicialUser.builder().idamId("1234").personalCode("ABC").build())
-            .sdoLocalAuthorityList(of(SdoLocalAuthorityEnum.localAuthorityLetter))
-            .sdoFurtherList(of(SdoFurtherInstructionsEnum.newDirection))
-            .build();
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .standardDirectionOrder(standardDirectionOrder)
-            .build();
         List<JudicialUsersApiResponse> judicialUsersApiResponses = new ArrayList<>();
         JudicialUsersApiResponse judicialUsersApiResponse = JudicialUsersApiResponse.builder()
             .fullName("Test")
@@ -3956,7 +3922,7 @@ class ManageOrderServiceTest {
         when(dynamicMultiSelectListService.getChildrenMultiSelectList(caseData)).thenReturn(of(dynamicMultiselectListElementUpdated));
 
         CaseData caseData1 = manageOrderService.setChildOptionsIfOrderAboutAllChildrenYes(caseData);
-        assertEquals("John (Child 1)", caseData1.getManageOrders().getChildOption().getListItems().get(0).getLabel());
+        assertEquals("John (Child 1)", caseData1.getManageOrders().getChildOption().getListItems().getFirst().getLabel());
     }
 
     @Test
@@ -4017,7 +3983,7 @@ class ManageOrderServiceTest {
     void testCleanUpSelectedManageOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("manageOrdersOptions","manageOrdersOptions");
-        manageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
+        ManageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
         assertNull(caseDataUpdated.get("manageOrdersOptions"));
 
     }
@@ -4125,7 +4091,7 @@ class ManageOrderServiceTest {
         assertNotNull(caseDataUpdated.get("additionalOrderDocuments"));
         List<Element<AdditionalOrderDocument>> additionalOrderDocuments =
             (List<Element<AdditionalOrderDocument>>) caseDataUpdated.get("additionalOrderDocuments");
-        assertEquals(2, additionalOrderDocuments.get(0).getValue().getAdditionalDocuments().size());
+        assertEquals(2, additionalOrderDocuments.getFirst().getValue().getAdditionalDocuments().size());
     }
 
     @Test
@@ -4159,7 +4125,7 @@ class ManageOrderServiceTest {
     void testCleanUpServeOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("serveOrderAdditionalDocuments","serveOrderAdditionalDocuments");
-        manageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
+        ManageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
         assertNull(caseDataUpdated.get("serveOrderAdditionalDocuments"));
     }
 
@@ -4573,7 +4539,6 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderList = new ArrayList<>();
         orderList.add(orders);
 
-        List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder().firstName("first").lastName("lastname")
             .representativeFirstName("repFirstName")
             .representativeLastName("repLastName")
@@ -4943,7 +4908,7 @@ class ManageOrderServiceTest {
                                  .code("6bb5e9ac-df97-4593-8b22-3969dc0bb4e1")
                                  .label("Sam Nolan")
                                  .build());
-        CaseData caseData = CaseData.builder()
+        return CaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
             .manageOrders(ManageOrders.builder().serveToRespondentOptions(YesNoNotApplicable.No)
                               .recipientsOptions(DynamicMultiSelectList.builder()
@@ -4956,7 +4921,6 @@ class ManageOrderServiceTest {
                                                 .build())
                               .build())
             .build();
-        return caseData;
     }
 
     @Test
@@ -5305,7 +5269,7 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) response.get("orderCollection");
 
         assertEquals("Financial compensation order following C79 enforcement application (C82)",
-                     orderCollection.get(0).getValue().getOrderTypeId());
+                     orderCollection.getFirst().getValue().getOrderTypeId());
         assertNotNull(response);
 
     }
@@ -5726,7 +5690,7 @@ class ManageOrderServiceTest {
         CaseData caseDataResp = manageOrderService.setHearingDataForSdo(caseData, hearings, "auth");
         assertNull(caseData.getStandardDirectionOrder().getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab());
         assertEquals(uuid, caseDataResp.getStandardDirectionOrder()
-            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().get(0).getId());
+            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().getFirst().getId());
     }
 
     @Test
@@ -5829,14 +5793,14 @@ class ManageOrderServiceTest {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         List<Element<OrderDetails>> orderDetails = manageOrderService.serveOrder(caseData, orderList);
         assertNotNull(orderDetails);
-        assertNotNull(orderDetails.get(0));
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0));
+        assertNotNull(orderDetails.getFirst());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst());
         assertEquals(
-            orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0).getValue()
+            orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst().getValue()
                 .getPartyId(),
-            (orders.getValue().getServeOrderDetails().getServedParties().get(0).getValue().getPartyId())
+            (orders.getValue().getServeOrderDetails().getServedParties().getFirst().getValue().getPartyId())
         );
     }
 
@@ -6318,9 +6282,8 @@ class ManageOrderServiceTest {
         List<Element<HearingData>> hearingsList = manageOrders1.getOrdersHearingDetails();
         when(hearingService.createAutomatedHearing(eq(authToken), any()))
             .thenThrow(new ManageOrderRuntimeException("Invalid Json"));
-        Exception exception = assertThrows(ManageOrderRuntimeException.class, () -> {
-            manageOrderService.createAutomatedHearingManagement(authToken, caseData, hearingsList);
-        });
+        Exception exception = assertThrows(ManageOrderRuntimeException.class,
+                                           () -> manageOrderService.createAutomatedHearingManagement(authToken, caseData, hearingsList));
         String expectedMessage = "Invalid Json";
         assertTrue(expectedMessage.contains(exception.getMessage()));
     }
@@ -6857,11 +6820,6 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        List<DynamicMultiselectListElement> elements = new ArrayList<>();
-        DynamicMultiselectListElement element = DynamicMultiselectListElement.builder()
-            .code("1234")
-            .label("test label").build();
-        elements.add(element);
         ManageOrders manageOrders = ManageOrders.builder()
             .judgeOrMagistrateTitle(JudgeOrMagistrateTitleEnum.circuitJudge)
             .build();
@@ -6894,14 +6852,6 @@ class ManageOrderServiceTest {
                                                                                           .build()).build();
         List<Element<OrderDetails>> orderList = new ArrayList<>();
         orderList.add(orders);
-
-        List<Element<PartyDetails>> partyDetails = new ArrayList<>();
-        PartyDetails details = PartyDetails.builder().firstName("first").lastName("lastname")
-            .solicitorOrg(Organisation.builder().organisationName("test Org").build())
-            .build();
-        Element<PartyDetails> partyDetailsElement = element(details);
-        partyDetails.add(partyDetailsElement);
-
 
 
         when(dgsService.generateDocument(Mockito.anyString(), Mockito.any(CaseDetails.class), Mockito.any()))
@@ -7901,7 +7851,7 @@ class ManageOrderServiceTest {
         assertNotNull(serveOrderList);
         assertNotNull(serveOrderList.getValue());
         assertEquals(1, serveOrderList.getValue().size());
-        assertEquals(secondOrderId, serveOrderList.getValue().get(0).getCode());
+        assertEquals(secondOrderId, serveOrderList.getValue().getFirst().getCode());
     }
 
     @Test
@@ -7941,7 +7891,7 @@ class ManageOrderServiceTest {
         assertNotNull(serveOrderList);
         assertNotNull(serveOrderList.getValue());
         assertEquals(1, serveOrderList.getValue().size());
-        assertEquals(firstOrderId, serveOrderList.getValue().get(0).getCode());
+        assertEquals(firstOrderId, serveOrderList.getValue().getFirst().getCode());
     }
 
     @Test
@@ -7975,7 +7925,7 @@ class ManageOrderServiceTest {
         List<Element<DraftOrder>> draftOrders = (List<Element<DraftOrder>>) result.get("draftOrderCollection");
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
-        assertEquals(Yes, draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -8011,7 +7961,7 @@ class ManageOrderServiceTest {
         List<Element<DraftOrder>> draftOrders = (List<Element<DraftOrder>>) result.get("draftOrderCollection");
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
-        assertEquals(Yes, draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -8047,7 +7997,7 @@ class ManageOrderServiceTest {
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
         // uploadAnOrder does not have Page 19, so AHR should not be triggered
-        assertNull(draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertNull(draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -8082,11 +8032,11 @@ class ManageOrderServiceTest {
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
         // Only COURT_ADMIN should trigger AHR
-        assertNull(draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertNull(draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
-    void testSetFinalOrderCollection_courtAdmin_noCheck_eligibleForAhr_setsAutoHearingPending() throws Exception {
+    void testSetFinalOrderCollection_courtAdmin_noCheck_eligibleForAhr_setsAutoHearingPending() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .forename("Test")
             .surname("Admin")
@@ -8132,11 +8082,11 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) result.get(ORDER_COLLECTION);
         assertNotNull(orderCollection);
         assertFalse(orderCollection.isEmpty());
-        assertEquals(Yes, orderCollection.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, orderCollection.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
-    void testSetFinalOrderCollection_courtAdmin_noCheck_notEligibleForAhr_doesNotSetAutoHearingPending() throws Exception {
+    void testSetFinalOrderCollection_courtAdmin_noCheck_notEligibleForAhr_doesNotSetAutoHearingPending() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .forename("Test")
             .surname("Admin")
@@ -8179,7 +8129,7 @@ class ManageOrderServiceTest {
         assertNotNull(orderCollection);
         assertFalse(orderCollection.isEmpty());
         // When not eligible for AHR, flag should not be Yes (can be null or No)
-        assertNotEquals(Yes, orderCollection.get(0).getValue().getIsAutoHearingReqPending());
+        assertNotEquals(Yes, orderCollection.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @ParameterizedTest(name = "Testing LA CIR document: {0}")
@@ -8199,6 +8149,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiledByLocalAuthority(LocalDate.now())
@@ -8210,7 +8161,7 @@ class ManageOrderServiceTest {
             authToken,
             EventRequestData.builder().build(),
             StartEventResponse.builder().build(),
-            new HashMap<String, Object>(),
+            new HashMap<>(),
             caseData,
             null
         );
@@ -8372,6 +8323,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiled(LocalDate.now())
@@ -8383,7 +8335,7 @@ class ManageOrderServiceTest {
             authToken,
             EventRequestData.builder().build(),
             StartEventResponse.builder().build(),
-            new HashMap<String, Object>(),
+            new HashMap<>(),
             caseData,
             null
         );
@@ -8446,6 +8398,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiledByLocalAuthority(LocalDate.now())
@@ -8518,6 +8471,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiledByLocalAuthority(LocalDate.now())
